{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 57,
  "lineage": "ed6c4878-a113-540d-b746-74b95f6af536",
  "resources": [
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22cd9491a9edb7b",
            "association_id": "eipassoc-0333021b26a2ff1c3",
            "domain": "vpc",
            "id": "eipalloc-0f22cd9491a9edb7b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0609ff417f3a771ce",
            "private_dns": "ip-10-0-0-153.ec2.internal",
            "private_ip": "10.0.0.153",
            "public_dns": "ec2-3-209-30-209.compute-1.amazonaws.com",
            "public_ip": "3.209.30.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085200277d068feb8",
            "association_id": "eipassoc-0e372f317aad70bae",
            "domain": "vpc",
            "id": "eipalloc-085200277d068feb8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e376aad5ad615e2",
            "private_dns": "ip-10-0-1-85.ec2.internal",
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-3-230-68-58.compute-1.amazonaws.com",
            "public_ip": "3.230.68.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:326779754677:instance/i-078690e4fb82063d8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078690e4fb82063d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd32b7d994756f57",
            "private_dns": "ip-10-0-2-223.ec2.internal",
            "private_ip": "10.0.2.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:326779754677:key/f3951942-05a4-4d5d-823b-4bd8d666f17b",
                "throughput": 125,
                "volume_id": "vol-05f533df9d63e439b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce06c74cd847af31",
            "tags": {
              "Name": "apache-server-0"
            },
            "tags_all": {
              "Name": "apache-server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0667999a96b71c61e"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:326779754677:instance/i-0bd686d4da30599bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd686d4da30599bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b425dced14fe1c8c",
            "private_dns": "ip-10-0-3-58.ec2.internal",
            "private_ip": "10.0.3.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:326779754677:key/f3951942-05a4-4d5d-823b-4bd8d666f17b",
                "throughput": 125,
                "volume_id": "vol-058130e5cd6e07ae4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6715048c2f15bcc",
            "tags": {
              "Name": "apache-server-1"
            },
            "tags_all": {
              "Name": "apache-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0667999a96b71c61e"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:326779754677:instance/i-088c12fb281adc047",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088c12fb281adc047",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0640ebc07faa05d15",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_ip": "10.0.0.238",
            "public_ip": "34.238.163.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:326779754677:key/f3951942-05a4-4d5d-823b-4bd8d666f17b",
                "throughput": 0,
                "volume_id": "vol-0adaab07d123a97dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051da7d21ea5966d0",
            "tags": {
              "Name": "nginx-server-0"
            },
            "tags_all": {
              "Name": "nginx-server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f66b946f2c2046c"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:326779754677:instance/i-0edbadd39c8a88767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edbadd39c8a88767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf779c441b34ddba",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_ip": "34.200.245.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:326779754677:key/f3951942-05a4-4d5d-823b-4bd8d666f17b",
                "throughput": 0,
                "volume_id": "vol-0df358e146279991e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd8c61d9cb7df065",
            "tags": {
              "Name": "nginx-server-1"
            },
            "tags_all": {
              "Name": "nginx-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f66b946f2c2046c"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/internalalb/d637b9c9392e254a",
            "arn_suffix": "app/internalalb/d637b9c9392e254a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-internalalb-1848513668.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/internalalb/d637b9c9392e254a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internalalb",
            "security_groups": [
              "sg-0c5e4f38bb9ea2f65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ce06c74cd847af31"
              },
              {
                "subnet_id": "subnet-0e6715048c2f15bcc"
              }
            ],
            "subnets": [
              "subnet-0ce06c74cd847af31",
              "subnet-0e6715048c2f15bcc"
            ],
            "tags": {
              "Name": "internal-ALB"
            },
            "tags_all": {
              "Name": "internal-ALB"
            },
            "vpc_id": "vpc-02affd65c9733ee7c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.internal_alb_sg",
            "module.security_group.aws_security_group.private_instance_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "internet_facing_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/externalalp/b6c6dc576e0ebdb0",
            "arn_suffix": "app/externalalp/b6c6dc576e0ebdb0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "externalalp-1746547897.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/externalalp/b6c6dc576e0ebdb0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "externalalp",
            "security_groups": [
              "sg-0466d49ea7aade89f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051da7d21ea5966d0"
              },
              {
                "subnet_id": "subnet-0fd8c61d9cb7df065"
              }
            ],
            "subnets": [
              "subnet-051da7d21ea5966d0",
              "subnet-0fd8c61d9cb7df065"
            ],
            "tags": {
              "Name": "external-ALB"
            },
            "tags_all": {
              "Name": "external-ALB"
            },
            "vpc_id": "vpc-02affd65c9733ee7c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.internetfacing_alb_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "apache_a_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e-20230509113518268200000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
            "target_id": "i-078690e4fb82063d8"
          },
          "dependencies": [
            "module.instances.aws_instance.apache_server",
            "module.loadbalancer.aws_lb_target_group.private_tg",
            "module.security_group.aws_security_group.private_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e-20230509113518231200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
            "target_id": "i-0bd686d4da30599bb"
          },
          "dependencies": [
            "module.instances.aws_instance.apache_server",
            "module.loadbalancer.aws_lb_target_group.private_tg",
            "module.security_group.aws_security_group.private_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:listener/app/internalalb/d637b9c9392e254a/ca384613fa871647",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:listener/app/internalalb/d637b9c9392e254a/ca384613fa871647",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/internalalb/d637b9c9392e254a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_alb.internal_alb",
            "module.loadbalancer.aws_lb_target_group.private_tg",
            "module.security_group.aws_security_group.internal_alb_sg",
            "module.security_group.aws_security_group.private_instance_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:listener/app/externalalp/b6c6dc576e0ebdb0/fff4607768a107a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:listener/app/externalalp/b6c6dc576e0ebdb0/fff4607768a107a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:loadbalancer/app/externalalp/b6c6dc576e0ebdb0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_alb.internet_facing_lb",
            "module.loadbalancer.aws_lb_target_group.front_end",
            "module.security_group.aws_security_group.internetfacing_alb_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1",
            "arn_suffix": "targetgroup/external-tg/a8f6ca21077747c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "external-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "external-tg"
            },
            "tags_all": {
              "Name": "external-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
            "arn_suffix": "targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/tf-20230509113429507600000001/dd3d64d2ad10945e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20230509113429507600000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attatch_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1-20230509114848234600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1",
            "target_id": "i-088c12fb281adc047"
          },
          "dependencies": [
            "module.instances.aws_instance.server_ubuntu",
            "module.loadbalancer.aws_lb_target_group.front_end",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1-20230509114848194900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:326779754677:targetgroup/external-tg/a8f6ca21077747c1",
            "target_id": "i-0edbadd39c8a88767"
          },
          "dependencies": [
            "module.instances.aws_instance.server_ubuntu",
            "module.loadbalancer.aws_lb_target_group.front_end",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.subnet.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.nate_gatway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ntgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22cd9491a9edb7b",
            "connectivity_type": "public",
            "id": "nat-0a544526eb9921564",
            "network_interface_id": "eni-0609ff417f3a771ce",
            "private_ip": "10.0.0.153",
            "public_ip": "3.209.30.209",
            "subnet_id": "subnet-051da7d21ea5966d0",
            "tags": {
              "Name": "ntgw-0"
            },
            "tags_all": {
              "Name": "ntgw-0"
            }
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085200277d068feb8",
            "connectivity_type": "public",
            "id": "nat-0d88ab5f991d8e79b",
            "network_interface_id": "eni-01e376aad5ad615e2",
            "private_ip": "10.0.1.85",
            "public_ip": "3.230.68.58",
            "subnet_id": "subnet-0fd8c61d9cb7df065",
            "tags": {
              "Name": "ntgw-1"
            },
            "tags_all": {
              "Name": "ntgw-1"
            }
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:security-group/sg-0c5e4f38bb9ea2f65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "internal lb traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0667999a96b71c61e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c5e4f38bb9ea2f65",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "internal routing ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f66b946f2c2046c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal_alb_sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal_alb_sg"
            },
            "tags_all": {
              "Name": "internal_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.private_instance_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internetfacing_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:security-group/sg-0466d49ea7aade89f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all trafic in the outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "allow all trafic in the outbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f66b946f2c2046c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0466d49ea7aade89f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internetfacing_alb_sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internetfacing_alb_sg"
            },
            "tags_all": {
              "Name": "internetfacing_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:security-group/sg-0667999a96b71c61e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0667999a96b71c61e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5e4f38bb9ea2f65"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_instance_sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_instance_sg"
            },
            "tags_all": {
              "Name": "private_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:security-group/sg-08f66b946f2c2046c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f66b946f2c2046c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0466d49ea7aade89f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_instance_sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_instance_sg"
            },
            "tags_all": {
              "Name": "public_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1085667799",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0667999a96b71c61e",
            "self": false,
            "source_security_group_id": "sg-0c5e4f38bb9ea2f65",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.internal_alb_sg",
            "module.security_group.aws_security_group.private_instance_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1983810442",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f66b946f2c2046c",
            "self": false,
            "source_security_group_id": "sg-0466d49ea7aade89f",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.internetfacing_alb_sg",
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1847090876",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0667999a96b71c61e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.private_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2670303751",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08f66b946f2c2046c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1987903830",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0667999a96b71c61e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.private_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2143411674",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f66b946f2c2046c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.public_instance_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:route-table/rtb-0ff3c52b84a27385a",
            "id": "rtb-0ff3c52b84a27385a",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a544526eb9921564",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb-0"
            },
            "tags_all": {
              "Name": "private_rtb-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nate_gatway.aws_nat_gateway.ntgw",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:route-table/rtb-0ddd6c61d2596e2e8",
            "id": "rtb-0ddd6c61d2596e2e8",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d88ab5f991d8e79b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb-1"
            },
            "tags_all": {
              "Name": "private_rtb-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nate_gatway.aws_nat_gateway.ntgw",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:route-table/rtb-0da76a664f4c676cb",
            "id": "rtb-0da76a664f4c676cb",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf9bef60e30a63dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-0"
            },
            "tags_all": {
              "Name": "public-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:route-table/rtb-0ac004b5aff16e896",
            "id": "rtb-0ac004b5aff16e896",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf9bef60e30a63dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3c1867fd4b610e",
            "route_table_id": "rtb-0ff3c52b84a27385a",
            "subnet_id": "subnet-0ce06c74cd847af31"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nate_gatway.aws_nat_gateway.ntgw",
            "module.subnet.aws_route_table.private_rtb",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8f6da866d57aee8",
            "route_table_id": "rtb-0ddd6c61d2596e2e8",
            "subnet_id": "subnet-0e6715048c2f15bcc"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nate_gatway.aws_nat_gateway.ntgw",
            "module.subnet.aws_route_table.private_rtb",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063d7a6f71731c78c",
            "route_table_id": "rtb-0da76a664f4c676cb",
            "subnet_id": "subnet-051da7d21ea5966d0"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rtb",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0011169714e64aad1",
            "route_table_id": "rtb-0ac004b5aff16e896",
            "subnet_id": "subnet-0fd8c61d9cb7df065"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rtb",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:subnet/subnet-0ce06c74cd847af31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce06c74cd847af31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0"
            },
            "tags_all": {
              "Name": "private-0"
            },
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:subnet/subnet-0e6715048c2f15bcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6715048c2f15bcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:subnet/subnet-051da7d21ea5966d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051da7d21ea5966d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0"
            },
            "tags_all": {
              "Name": "public-0"
            },
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:subnet/subnet-0fd8c61d9cb7df065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd8c61d9cb7df065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:internet-gateway/igw-0cf9bef60e30a63dc",
            "id": "igw-0cf9bef60e30a63dc",
            "owner_id": "326779754677",
            "vpc_id": "vpc-02affd65c9733ee7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326779754677:vpc/vpc-02affd65c9733ee7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09211509232306d8b",
            "default_route_table_id": "rtb-04f1da6c0220eaee3",
            "default_security_group_id": "sg-05f8496c673f2affb",
            "dhcp_options_id": "dopt-e7eef39d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02affd65c9733ee7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f1da6c0220eaee3",
            "owner_id": "326779754677",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}